Report action deltas kpi #437